*zenbook-als-module-0_p20130603 (07 Feb 2014)
*zenbook-als-module-9999 (07 Feb 2014)

  07 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +zenbook-als-module-0_p20130603.ebuild, +zenbook-als-module-9999.ebuild:
  [app-laptop/zenbook-als-module] Initial ebuild.