@@ -1,1 +1,1 @@
-DIST zenbook-als-module-0_p20130603-git.tar.gz 1772 SHA256 cc0edd5a112f8874c25f02672d324665abb5655a58462d40a63e5cbf0071a533 SHA512 0117d852030d77a78e11a20d04b4b8988843ed6795efa0b22b8a72b1c0ac6d6d71eaf4dd248ddbf2929d49c46f4b86c29b9d7628db022efe22e7f5a9ecc4ac6a WHIRLPOOL 83fff253da249d89c47bc0156d7a5b031d9006c42c042df580dd1e93556d1094a3787e41d89bcf2b7dbbc36420bfa14d47b16722426d610e1bfea152fd027423
+DIST zenbook-als-module-0_p20140423-git.tar.gz 2591 SHA256 6a9959d1e9d1b946c68d95f0483c3241cca5d1470af2d351e7528d33bad5ca73 SHA512 0d51973f47e76f772e71c97cfa8f5c63416a156c016d7c50485765cdfcca5ee593af88a2d6664c7f475d368e316329928227dfde8bed9258f38b17ff459c4ecb WHIRLPOOL e43518052ca1c3882c6204fd9eebfb7381371b910a13192de74ba5b9207efe5599cd1b0847f58d1ae19679bed220864b87ebb832735453bf1aefeb2caf1bc4fb
