@@ -6,19 +6,19 @@ EAPI=5
 
 inherit linux-mod
 
-if [ "${PV}" = "9999" ]; then
+if [[ "${PV}" = "9999" ]]; then
 	inherit git-r3
-	EGIT_REPO_URI="git://github.com/victorenator/als.git"
+	EGIT_REPO_URI="git://github.com/danieleds/als.git"
 	KEYWORDS=""
 else
-	COMMIT_ID="b453b6103e6b45cfc96516054b58e35e23511c4d"
-	SRC_URI="https://github.com/victorenator/als/archive/${COMMIT_ID}.tar.gz -> ${P}-git.tar.gz"
+	COMMIT_ID="150684d1b73e1405609502e1166ba878c42dbb18"
+	SRC_URI="https://github.com/danieleds/als/archive/${COMMIT_ID}.tar.gz -> ${P}-git.tar.gz"
 	KEYWORDS="~amd64"
 	S=${WORKDIR}/als-${COMMIT_ID}
 fi
 
 DESCRIPTION="A kernel module for the ASUS Zenbook Ambient Light Sensor Driver"
-HOMEPAGE="http://github.com/victorenator/als"
+HOMEPAGE="http://github.com/danieleds/als"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -26,10 +26,6 @@ IUSE=""
 
 MODULE_NAMES="als(misc:${S})"
 BUILD_TARGETS="all"
-
-src_prepare(){
-	sed -i -e 's/make/$(MAKE)/' Makefile || die
-}
 
 src_compile(){
 	BUILD_PARAMS="KDIR=${KV_OUT_DIR} M=${S}"
