@@ -1,3 +1,10 @@
+*zenbook-als-module-0_p20140423 (05 Jun 2014)
+
+  05 Jun 2014; Manuel Rüger <mrueg@gentoo.org>
+  +zenbook-als-module-0_p20140423.ebuild,
+  -zenbook-als-module-0_p20130603.ebuild, zenbook-als-module-9999.ebuild:
+  [app-laptop/zenbook-als-module] Update snapshot.
+
 *zenbook-als-module-0_p20130603 (07 Feb 2014)
 *zenbook-als-module-9999 (07 Feb 2014)
 
